force-app/main/default/objects/Patient_Insurance__c/Patient_Insurance__c.object-meta.xml
<CustomObject>
    <description>Patient insurance / eligibility rows for hackathon demo (separate list view).</description>
    <label>Patient Insurance</label>
    <nameField>
        <displayFormat>PI-{00000}</displayFormat>
        <label>Patient Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>