force-app/main/default/objects/Patient_Insurance__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the patient’s primary plan when multiple rows exist.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>