force-app/main/default/objects/Patient_Insurance__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <description>When eligibility was last checked.</description>
    <label>Last Verified Date</label>
    <type>Date</type>
</CustomField>