force-app/main/default/objects/Patient_Insurance__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <description>Member or subscriber id. Use encryption in production if required by policy.</description>
    <label>Member Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>