force-app/main/default/objects/Patient_Insurance__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Short note; avoid storing unnecessary sensitive PHI.</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>