force-app/main/default/objects/Patient_Insurance__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient who owns this coverage row.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Insurances</relationshipLabel>
    <relationshipName>Patient_Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>