force-app/main/default/objects/Patient_Insurance__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Coverage start for this snapshot.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>