force-app/main/default/objects/Patient_Insurance__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>Coverage end for this snapshot.</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>